--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 <!--banner-->
 		<div class="aboutbanner">
 			<h2>About</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eius</p>
+			<p>hi hiweiedjcnkjcdcikjdckdmckldscj</p>
 			<h3><a href="index.html">view more </a></h3>
 		</div>
 
